--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = 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
+OPENAI_API_KEY = sk-JxBh8fc5MsxBqYmuZxNUT3BlbkFJbES6u4RdeVI0********
